refactor!: move a LOT of stuff around
Moves a lot of stuff around, particularly in the `common` module